0.83.13
  - S386C928 hardware cursor fixed to divide X coordinate
    by bytes per pixel indicated in the control register
    to match apparent Windows 3.1/95 behavior. Cursor
    now tracks host properly even in highcolor/truecolor
    modes.
  - Added support for S386C928 hardware cursor color
    selection in 256-color mode, which is different
    from later cards.
  - S3 XGA "BYTE SWP" fixed only to byte swap if the
    transfer is 16-bit wide. This fixes the dither
    pattern drawn by Windows 95/98 when you select
    "Shutdown" from the Start menu.
  - Added config options "working directory option" and
    "working directory default" in [dosbox] section of
    the config file to provide various options for the
    users to control DOSBox-X's working directory. For
    example, DOSBox-X can use the primary config file
    directory or the DOSBox-X program directory as its
    working directory. You can view the DOSBox-X'safe
    working directory with CONFIG -L command. DOSBox-X
    is also able to save the working directory that a
    user selects to global config files. (Wengier)
  - Added new command-line options -promptfolder and
    -nopromptfolder which will cause the folder prompt
    dialogs to show or not to show at startup.
  - Mac OS X builds will prompt the user to select a
    folder at startup if run from the Finder (or from
    the root directory). The folder selected will then
    become the current working directory of DOSBox-X.
    This makes it possible to start DOSBox-X with a
    config file of your choice and to control where
    the capture, save states and other files go.
  - Fixed Tseng ET4000 640x480 256-color SVGA mode
    when using the ET4000.BIN VGA BIOS, or Windows 98.
  - Added segment limit checks in Normal core for
    MOVSB/MOVSW/MOVSD and STOSB/STOSW/STOSD, which is
    needed for DOSBox-X to work with the Windows 3.1
    S3 86C928 display drivers that use segment limit
    exceptions to fake a linear framebuffer.