@@ -202,15 +202,13 @@ public:
 		}
 	
 		my_client = snd_seq_client_id(seq_handle);
-		snd_seq_set_client_name(seq_handle, "DOSBOX");
+		snd_seq_set_client_name(seq_handle, "DOSBOX-X");
 		snd_seq_set_client_group(seq_handle, "input");
 	
 		caps = SND_SEQ_PORT_CAP_READ;
 		if (seq_client == SND_SEQ_ADDRESS_SUBSCRIBERS)
 			caps |= SND_SEQ_PORT_CAP_SUBS_READ;
-		my_port =
-		          snd_seq_create_simple_port(seq_handle, "DOSBOX", caps,
-		          SND_SEQ_PORT_TYPE_MIDI_GENERIC | SND_SEQ_PORT_TYPE_APPLICATION);
+		my_port = snd_seq_create_simple_port(seq_handle, "DOSBOX-X", caps, SND_SEQ_PORT_TYPE_MIDI_GENERIC | SND_SEQ_PORT_TYPE_APPLICATION);
 		if (my_port < 0) {
 			snd_seq_close(seq_handle);
 			LOG(LOG_MISC,LOG_WARN)("ALSA:Can't create ALSA port");
