@@ -34,7 +34,11 @@ typedef enum {
 typedef struct {
 	uint8_t data : 7;
 	uint8_t is_data : 1;
-} __attribute__((__packed__, gcc_struct)) RetroWaveProtocol_Serial_Byte;
+}
+#if defined(__GCC__)
+__attribute__((__packed__, gcc_struct))
+#endif
+RetroWaveProtocol_Serial_Byte;
 
 extern uint32_t retrowave_protocol_serial_packed_length(uint32_t len_in);
 extern uint32_t retrowave_protocol_serial_pack(const void *_buf_in, uint32_t len_in, void *_buf_out);
