@@ -1244,6 +1244,11 @@ copy "$(SolutionDir)\..\contrib\windows\shaders\*.*" "$(OutputPath)\shaders\"</C
     <ClCompile Include="..\src\hardware\reSID\wave8580_PS_.cpp" />
     <ClCompile Include="..\src\hardware\reSID\wave8580_P_T.cpp" />
     <ClCompile Include="..\src\hardware\reSID\wave8580__ST.cpp" />
+    <ClCompile Include="..\src\hardware\RetroWaveLib\RetroWave.c" />
+    <ClCompile Include="..\src\hardware\RetroWaveLib\RetroWave_DOSBoX.cpp" />
+    <ClCompile Include="..\src\hardware\RetroWaveLib\Board\OPL3.c" />
+    <ClCompile Include="..\src\hardware\RetroWaveLib\Protocol\Serial.c" />
+    <ClCompile Include="..\src\hardware\RetroWaveLib\Platform\Win32_SerialPort.c" />
     <ClCompile Include="..\src\hardware\sblaster.cpp" />
     <ClCompile Include="..\src\hardware\serialport\directserial.cpp" />
     <ClCompile Include="..\src\hardware\serialport\libserial.cpp" />
